--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Project1\Project1\TextureManager.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Project1\Project1\TextureManager.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Game.h" />
