--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -124,18 +124,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Project1\Project1\TextureManager.cpp" />
+    <ClCompile Include="..\..\Project1\Project1\Vector2D.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="MagicBall.cpp" />
+    <ClCompile Include="Paddle.cpp" />
+    <ClCompile Include="Point2D.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Project1\Project1\TextureManager.h" />
+    <ClInclude Include="..\..\Project1\Project1\Vector2D.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Line.h" />
     <ClInclude Include="MagicBall.h" />
+    <ClInclude Include="Paddle.h" />
+    <ClInclude Include="Point2D.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
