--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Amulet.cpp" />
     <ClCompile Include="Barrier.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Functions.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Amulet.h" />
     <ClInclude Include="Barrier.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Functions.h" />
