--- a/SDLTutorial/SDLTutorial.vcxproj.filters
+++ b/SDLTutorial/SDLTutorial.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Barrier.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Amulet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Functions.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Barrier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Amulet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
