--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -126,8 +126,10 @@
     <ClCompile Include="Amulet.cpp" />
     <ClCompile Include="Barrier.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="EndScreen.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="ListAmulet.cpp" />
     <ClCompile Include="ListBrick.cpp" />
@@ -139,13 +141,16 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="WinScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Amulet.h" />
     <ClInclude Include="Barrier.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="EndScreen.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameOver.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="ListAmulet.h" />
     <ClInclude Include="ListBrick.h" />
@@ -156,6 +161,7 @@
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="WinScreen.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
