--- a/SDLTutorial/SDLTutorial.vcxproj.filters
+++ b/SDLTutorial/SDLTutorial.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="EndScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SettingScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Functions.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EndScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
