Fix setting screen

--- a/SDLTutorial/SDLTutorial.vcxproj.filters
+++ b/SDLTutorial/SDLTutorial.vcxproj.filters
@@ -151,5 +151,8 @@
     <Text Include="MapSavedData.txt">
       <Filter>Header Files</Filter>
     </Text>
+    <Text Include="HighScore.txt">
+      <Filter>Header Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
