--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -171,6 +171,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="HighScore.txt" />
     <Text Include="MapSavedData.txt" />
     <Text Include="PlayerData.txt" />
   </ItemGroup>
