--- a/SDLTutorial/SDLTutorial.vcxproj
+++ b/SDLTutorial/SDLTutorial.vcxproj
@@ -124,10 +124,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Amulet.cpp" />
+    <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="ComputerPaddle.cpp" />
     <ClCompile Include="EndScreen.cpp" />
     <ClCompile Include="FinalMap.cpp" />
+    <ClCompile Include="function.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameOver.cpp" />
@@ -140,6 +143,8 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Point2D.cpp" />
+    <ClCompile Include="ScrollBar.cpp" />
     <ClCompile Include="SettingScreen.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="TextureManager.cpp" />
@@ -147,10 +152,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Amulet.h" />
+    <ClInclude Include="Ball.h" />
+    <ClInclude Include="BaseObject.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="ComputerPaddle.h" />
     <ClInclude Include="EndScreen.h" />
     <ClInclude Include="FinalMap.h" />
+    <ClInclude Include="function.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameOver.h" />
@@ -163,6 +171,8 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Point2D.h" />
+    <ClInclude Include="ScrollBar.h" />
     <ClInclude Include="SettingScreen.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="WinScreen.h" />
